responsiveness and logo changes

--- a/frontend/personal-website/personal-website/src/index.html
+++ b/frontend/personal-website/personal-website/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Personal Website</title>
+  <title>Xenon Dev Website</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/images/logo.jpg">
-  <script src="https://kit.fontawesome.com/9dd06d4010.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/x-icon" href="assets/images/New-logo.png">
+  <!--<script src="https://kit.fontawesome.com/9dd06d4010.js" crossorigin="anonymous"></script>-->
 </head>
 <body>
   <app-root></app-root>
