--- a/frontend/personal-website/personal-website/src/index.html
+++ b/frontend/personal-website/personal-website/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/New-logo.png">
-  <!--<script src="https://kit.fontawesome.com/9dd06d4010.js" crossorigin="anonymous"></script>-->
+  <script src="https://kit.fontawesome.com/9dd06d4010.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
